force-app/main/default/objects/Location__c/fields/Academic_Account__c.field-meta.xml
<CustomField>
    <fullName>Academic_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>