force-app/main/default/objects/Location__c/fields/Address_from_SAP__c.field-meta.xml
<CustomField>
    <fullName>Address_from_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address from SAP</label>
    <type>Checkbox</type>
</CustomField>