force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
            </value>
            <value>
                <fullName>Nunavut</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Armed Forces Europe</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Guam</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Montana</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Ohio</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>Palau</fullName>
            </value>
            <value>
                <fullName>Wyoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>