force-app/main/default/objects/Location__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Id</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>